# pong-3d

./: CMakeLists.txt  README.md
include/: Game.hpp  Material.hpp  Mesh.hpp  Rect.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  VertexAttrib.hpp  VertexBuffer.hpp  Window.hpp
src/: Game.cpp  Material.cpp  Mesh.cpp  Rect.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  frag.glsl  main.cpp  vert.glsl
